--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,21 @@
 steps:
   - name: 'docker'
-    args: ['build', '-t','gcr.io/$PROJECT_ID/gcpdevops','.']
+    args:
+      - 'build'
+      - '-t'
+      - 'gcr.io/$PROJECT_ID/gcpdevops'
+      - '.'
+  - name: 'gcr.io/cloud-builders/gke-deploy'
+    args:
+      - 'run'
+      - '--filename=gke.yaml'
+      - '--image=gcr.io/$PROJECT_ID/gcpdevops'
+      - '--location=us-central1-c'
+      - '--cluster=gcp-devops-project'
+      - '--namespace=gcp-devops-prod'
+
 images:
-  - 'gcr.io/$PROJECT_ID/gcpdevops'  
+  - 'gcr.io/$PROJECT_ID/gcpdevops'
+
 options:
   logging: CLOUD_LOGGING_ONLY
